--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 Flask==0.12.2
 requests==2.20.1
+google-auth-oauthlib==9.0.1
 google-api-python-client
 google-auth
-google-auth-oauthlib
 google-auth-httplib2
