--- a/app.yaml
+++ b/app.yaml
@@ -1,2 +1,6 @@
-runtime: python37
-entrypoint: gunicorn -b :$PORT main:app
+runtime: python
+env: flex
+entrypoint: python main.py
+
+runtime_config:
+    python_version: 3
